add new website from server na

--- a/xem-phim-moi/dep-trai-thay-sai-sai/index.html
+++ b/xem-phim-moi/dep-trai-thay-sai-sai/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             11
+             12
             </dd>
             <br/>
            </dl>
@@ -1773,21 +1773,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguyen-tac-cua-khoai-lac" title="Nguyên tắc của khoái lạc">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-ke-cuop-nha-bang" title="Những Kẻ Cướp Nhà Băng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguyen-tac-cua-khoai-lac-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-ke-cuop-nha-bang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nguyên tắc của khoái lạc
+             Những Kẻ Cướp Nhà Băng
             </span>
             <span class="list-top-movie-item-en">
-             The Principles of Pleasure
+             Bonnie and Clyde
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1795,40 +1795,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sieu-xa-thu" title="Siêu xạ thủ">
+          <a class="list-top-movie-link" href="/phim-moi/dynasty-warriors-chien-binh-tam-quoc" title="Dynasty Warriors: Chiến binh Tam Quốc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-xa-thu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dynasty-warriors-chien-binh-tam-quoc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Siêu xạ thủ
+             Dynasty Warriors: Chiến binh Tam Quốc
             </span>
             <span class="list-top-movie-item-en">
-             The Sniper
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-song-vo-hinh" title="Cuộc Sống Vô Hình">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-song-vo-hinh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cuộc Sống Vô Hình
-            </span>
-            <span class="list-top-movie-item-en">
-             Invisible Life
+             Dynasty Warriors
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1839,21 +1817,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/loai-ac-doc-4-tinh-giac" title="Loài Ác Độc 4: Tỉnh Giấc">
+          <a class="list-top-movie-link" href="/phim-moi/my-nhan-tam-co" title="Mỹ Nhân Tâm Cổ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loai-ac-doc-4-tinh-giac-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/my-nhan-tam-co-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Loài Ác Độc 4: Tỉnh Giấc
+             Mỹ Nhân Tâm Cổ
             </span>
             <span class="list-top-movie-item-en">
-             Species: The Awakening
+             The Poison Beauty
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1861,18 +1839,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-duoi-nui-su-tu" title="Chuyện Dưới Núi Sư Tử">
+          <a class="list-top-movie-link" href="/phim-moi/goc-toi-dong-tien-phan-2" title="Góc Tối Đồng Tiền (Phần 2)">
            <span class="status">
-            HD Lồng Tiếng
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-duoi-nui-su-tu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/goc-toi-dong-tien-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chuyện Dưới Núi Sư Tử
+             Góc Tối Đồng Tiền (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             The Stories of Lion Rock Spirit
+             Ozark (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/song-gio-cuoc-doi-2" title="Sóng Gió Cuộc Đời">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-gio-cuoc-doi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Sóng Gió Cuộc Đời
+            </span>
+            <span class="list-top-movie-item-en">
+             Oh My Life
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
