add new website from server na

--- a/xem-phim-moi/dep-trai-thay-sai-sai/index.html
+++ b/xem-phim-moi/dep-trai-thay-sai-sai/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             12
+             13
             </dd>
             <br/>
            </dl>
@@ -1773,18 +1773,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-ke-cuop-nha-bang" title="Những Kẻ Cướp Nhà Băng">
+          <a class="list-top-movie-link" href="/phim-moi/nha-vua-noi-lap" title="Nhà Vua Nói Lắp">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-ke-cuop-nha-bang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-vua-noi-lap-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những Kẻ Cướp Nhà Băng
+             Nhà Vua Nói Lắp
             </span>
             <span class="list-top-movie-item-en">
-             Bonnie and Clyde
+             The King's Speech
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1795,40 +1795,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dynasty-warriors-chien-binh-tam-quoc" title="Dynasty Warriors: Chiến binh Tam Quốc">
+          <a class="list-top-movie-link" href="/phim-moi/ngay-suy-tan" title="Ngày suy tàn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dynasty-warriors-chien-binh-tam-quoc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngay-suy-tan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dynasty Warriors: Chiến binh Tam Quốc
+             Ngày suy tàn
             </span>
             <span class="list-top-movie-item-en">
-             Dynasty Warriors
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/my-nhan-tam-co" title="Mỹ Nhân Tâm Cổ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/my-nhan-tam-co-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mỹ Nhân Tâm Cổ
-            </span>
-            <span class="list-top-movie-item-en">
-             The Poison Beauty
+             The Decline
             </span>
             <span class="list-top-movie-item-view">
              0 lượt xem
@@ -1839,21 +1817,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/goc-toi-dong-tien-phan-2" title="Góc Tối Đồng Tiền (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-tinh-manhattan" title="Chuyện Tình Manhattan">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/goc-toi-dong-tien-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-tinh-manhattan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Góc Tối Đồng Tiền (Phần 2)
+             Chuyện Tình Manhattan
             </span>
             <span class="list-top-movie-item-en">
-             Ozark (Season 2)
+             Manhattan
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1861,21 +1839,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/song-gio-cuoc-doi-2" title="Sóng Gió Cuộc Đời">
+          <a class="list-top-movie-link" href="/phim-moi/xac-song-daryl-dixon" title="Xác Sống: Daryl Dixon">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-gio-cuoc-doi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xac-song-daryl-dixon-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sóng Gió Cuộc Đời
+             Xác Sống: Daryl Dixon
             </span>
             <span class="list-top-movie-item-en">
-             Oh My Life
+             The Walking Dead: Daryl Dixon
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bay-canh-cut-nha-popper" title="Bầy Cánh Cụt Nhà Popper">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bay-canh-cut-nha-popper-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bầy Cánh Cụt Nhà Popper
+            </span>
+            <span class="list-top-movie-item-en">
+             Mr. Popper's Penguins
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
