add new website from server na

--- a/xem-phim-bo/hau-phu-phu-nhan-khong-de-lam/index.html
+++ b/xem-phim-bo/hau-phu-phu-nhan-khong-de-lam/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1657,21 +1657,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tiet-nhon-quy-chinh-dong" title="Tiết Nhơn Quý Chinh Đông">
+          <a class="list-top-movie-link" href="/phim-moi/nhat-ki-tinh-yeu-cua-tae" title="Nhật Kí Tình Yêu Của Tae">
            <span class="status">
-            HD Lồng Tiếng
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tiet-nhon-quy-chinh-dong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhat-ki-tinh-yeu-cua-tae-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tiết Nhơn Quý Chinh Đông
+             Nhật Kí Tình Yêu Của Tae
             </span>
             <span class="list-top-movie-item-en">
-             The Legend Of The General Who Never Was
+             섹스깐부
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1679,18 +1679,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hiep-si-cuoi-cung" title="Hiệp Sĩ Cuối Cùng">
+          <a class="list-top-movie-link" href="/phim-moi/tham-hoa-pompeii" title="Thảm họa Pompeii">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hiep-si-cuoi-cung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-hoa-pompeii-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hiệp Sĩ Cuối Cùng
+             Thảm họa Pompeii
             </span>
             <span class="list-top-movie-item-en">
-             Last Knights
+             Pompeii
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1701,18 +1701,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-doi-chua-jesus" title="Cuộc Đời Chúa Jesus">
+          <a class="list-top-movie-link" href="/phim-moi/nguu-ma-vuong-tro-lai" title="Ngưu Ma Vương Trở Lại">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-doi-chua-jesus-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguu-ma-vuong-tro-lai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc Đời Chúa Jesus
+             Ngưu Ma Vương Trở Lại
             </span>
             <span class="list-top-movie-item-en">
-             Killing Jesus
+             Bull Demon King Rise Again
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/max-dien" title="Max Điên">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/max-dien-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Max Điên
+            </span>
+            <span class="list-top-movie-item-en">
+             Mad Max
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1723,43 +1745,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/i-dont-want-to-run-season-1" title="I Don’t Want to Run Season 1">
+          <a class="list-top-movie-link" href="/phim-moi/kiem-tinh" title="Kiếm Tình">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/i-dont-want-to-run-season-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kiem-tinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             I Don’t Want to Run Season 1
+             Kiếm Tình
             </span>
             <span class="list-top-movie-item-en">
-             I Don't Want to Run Season 1
+             The Spirit Of The Swords
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bom-xit" title="Bom xịt">
-           <span class="status">
-            Vietsub - HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bom-xit-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bom xịt
-            </span>
-            <span class="list-top-movie-item-en">
-             Bomb Scared
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
